src/objects/Account_Reference__c.object
<CustomObject>
    <description>This object is used to store data from EL1 linked to specific references.</description>
    <fields>
        <fullName>C_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the Account Name on an Account Reference record.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account References</relationshipLabel>
        <relationshipName>Account_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C_ExternalId__c</fullName>
        <description>This field is used to store the External Id of an Account Reference record.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_External_Person_Key__c</fullName>
        <description>This field is used to maintain the External Unique Key.</description>
        <label>External Person Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_Reference_Type__c</fullName>
        <description>This field is used to store the Reference Type of an Account Reference record.</description>
        <label>Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>ISOL</fullName>
                </value>
                <value>
                    <fullName>TECH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEL_Formula_Person_Key__c</fullName>
        <formula>C_Account_Name__r.C_External_Person_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Person Key</label>
        <type>Text</type>
    </fields>
    <label>Account Reference</label>
    <listViews>
        <fullName>ALL1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>Credit_and_Collection_Account_Reference</fullName>
        <filterScope>Queue</filterScope>
        <label>Credit and Collection</label>
        <queue>Credit_and_Collection</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>General_Account_Reference</fullName>
        <filterScope>Queue</filterScope>
        <label>General</label>
        <queue>General</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Move_Account_Reference</fullName>
        <filterScope>Queue</filterScope>
        <label>Move</label>
        <queue>Move</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Retention_Account_Reference</fullName>
        <filterScope>Queue</filterScope>
        <label>Retention</label>
        <queue>Retention</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Account Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>